blackbone-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.68.1 */

use crate::types::*;

pub type ProcessPtr = PVOID;
pub type PROCENUMBYNAMEPROC =
    ::std::option::Option<unsafe extern "C" fn(pid: DWORD, lParam: LPARAM)>;
extern "C" {
    pub fn Process_Create() -> ProcessPtr;
}
extern "C" {
    pub fn Process_Destroy(process: ProcessPtr);
}
extern "C" {
    pub fn Process_Attach(process: ProcessPtr, pid: DWORD, access: DWORD) -> NTSTATUS;
}
extern "C" {
    pub fn Process_AttachByName(
        process: ProcessPtr,
        name: *const wchar_t,
        access: DWORD,
    ) -> NTSTATUS;
}
extern "C" {
    pub fn Process_AttachByHandle(process: ProcessPtr, handle: HANDLE) -> NTSTATUS;
}
extern "C" {
    pub fn Process_CreateAndAttach(
        process: ProcessPtr,
        path: *const wchar_t,
        suspended: BOOL,
        forceInit: BOOL,
        cmdLine: *const wchar_t,
        currentDir: *const wchar_t,
        pStartup: *mut STARTUPINFOW,
    ) -> NTSTATUS;
}
extern "C" {
    pub fn Process_Detach(process: ProcessPtr) -> NTSTATUS;
}
extern "C" {
    pub fn Process_EnsureInit(process: ProcessPtr) -> NTSTATUS;
}
extern "C" {
    pub fn Process_Suspend(process: ProcessPtr) -> NTSTATUS;
}
extern "C" {
    pub fn Process_Resume(process: ProcessPtr) -> NTSTATUS;
}
extern "C" {
    pub fn Process_pid(process: ProcessPtr) -> DWORD;
}
extern "C" {
    pub fn Process_valid(process: ProcessPtr) -> BOOL;
}
extern "C" {
    pub fn Process_Terminate(process: ProcessPtr, code: DWORD) -> NTSTATUS;
}
extern "C" {
    pub fn Process_EnumByName(name: *const wchar_t, lpEnumFunc: PROCENUMBYNAMEPROC, lParam: LPARAM);
}
